<resources>
    <string name="app_name">免疫圈</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 登录页面-->
    <string name="login_login_btn">登录</string>
    <string name="login_phone_num_tv">手机号</string>
    <string name="login_phone_num_et_hint">请输入手机号码</string>
    <string name="login_password_tv">密码</string>
    <string name="login_password_et_hint">请输入密码</string>
    <string name="login_other_account_tv">其他账户登录</string>
    <string name="login_express_consent_tv">登录/注册即表示同意</string>
    <string name="login_user_protocol_tv">《用户协议》</string>
    <string name="login_regist_tv">注册</string>
    <string name="login_forget_passerod_tv">忘记密码</string>
    <!-- 注册页面-->
    <string name="regist_regist_tv">注册</string>
    <string name="regist_forget_passerod_tv">输入您的手机号</string>
    <string name="regist_send_code_btn">发送验证码</string>
    <string name="regist_input_code_et_hint">输入验证码</string>
    <string name="regist_send_code_toast1_tv">我们已发送</string>
    <string name="regist_send_code_toast2_tv">到您的手机：</string>
    <string name="regist_next_step">下一步</string>
    <!-- 首页-->
    <string name="home_hot">热榜</string>
    <string name="home_address">通讯录</string>
    <string name="home_post">发帖</string>
    <string name="home_message">消息</string>
    <string name="home_my">我的</string>
</resources>
