<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <RadioGroup
            android:id="@+id/main_bottom_tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/titleText"
            android:orientation="horizontal">


            <com.ecuca.immunecircle.ui.view.MyRadioButton
                android:id="@+id/main_hot"
                style="@style/Main_RG"
                android:checked="true"
                android:text="@string/home_hot"
                custom:my_drawableSize="30dp"
                custom:my_drawableTop="@drawable/main_index_hot" />


            <com.ecuca.immunecircle.ui.view.MyRadioButton
                android:id="@+id/main_address"
                style="@style/Main_RG"
                android:checked="false"
                android:text="@string/home_address"
                custom:my_drawableSize="30dp"
                custom:my_drawableTop="@drawable/main_index_address" />

            <com.ecuca.immunecircle.ui.view.MyRadioButton
                android:id="@+id/main_post"
                style="@style/Main_RG"
                android:checked="false"
                android:text="@string/home_post"
                custom:my_drawableSize="30dp"
                custom:my_drawableTop="@drawable/main_index_post" />

            <com.ecuca.immunecircle.ui.view.MyRadioButton
                android:id="@+id/main_message"
                style="@style/Main_RG"
                android:checked="false"
                android:text="@string/home_message"
                custom:my_drawableSize="30dp"
                custom:my_drawableTop="@drawable/main_index_msg" />

            <com.ecuca.immunecircle.ui.view.MyRadioButton
                android:id="@+id/main_my"
                style="@style/Main_RG"
                android:checked="false"
                android:text="@string/home_my"
                custom:my_drawableSize="30dp"
                custom:my_drawableTop="@drawable/main_index_my" />
        </RadioGroup>
    </RelativeLayout>
</LinearLayout>