<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="42dp"
            android:layout_marginTop="44dp"
            android:text="@string/login_regist_tv"
            android:textColor="@color/login_regist_tv"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:text="@string/login_phone_num_tv"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="51dp"
            android:layout_marginRight="42.5dp"
            android:layout_marginTop="34dp"
            android:background="@null"
            android:hint="@string/login_phone_num_et_hint"
            android:inputType="phone"
            android:textColor="@color/text_gray666"
            android:textColorHint="@color/text_gray666"
            android:textSize="@dimen/text_size_18"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="42.5dp"
            android:layout_marginRight="42.5dp"
            android:layout_marginTop="15dp"
            android:background="@color/view_line"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:text="@string/login_password_tv"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="34dp">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:textColor="@color/text_gray666"
                android:textColorHint="@color/text_gray666"
                android:textSize="@dimen/text_size_18"/>


            <ImageView
                android:id="@+id/img_change_pwd_status"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="42.5dp"
                android:padding="2dp"
                android:src="@mipmap/ic_launcher"/>

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="42.5dp"
            android:layout_marginRight="42.5dp"
            android:layout_marginTop="15dp"
            android:background="@color/view_line"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="忘记密码?"
            android:textColor="@color/text_gray999"
            android:textSize="@dimen/text_size_15"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/view_line"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_login_tv_bg"
        android:gravity="center"
        android:text="登录"
        android:textColor="#E60012"
        android:textSize="@dimen/text_size_18"/>
</LinearLayout>